--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,9 @@
 *{
   margin: 0;
 }
+html {
+  overflow-x: hidden;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -26,9 +29,9 @@ code {
     @apply hover:scale-110 transform transition duration-300 ease-out
   }
   .nav_link{
-    @apply hover:border-b border-gray-300 
+    @apply hover:text-gray-700 hover:border-b border-gray-700
   }
   .card_button{
-    @apply hover:opacity-70 transform transition duration-300 ease-out
+    @apply hover:opacity-70 transform transition duration-300 ease-out active:scale-95
   }
 }
